--- a/NoteApp/Views/Note/ShowNotes.cshtml
+++ b/NoteApp/Views/Note/ShowNotes.cshtml
@@ -132,7 +132,7 @@ else
         console.log(id)
         $.ajax({
             type: 'GET',
-            url: "http://localhost:58940/Note/NoteDetail/" + id,
+            url: "/Note/NoteDetail/" + id,
             dataType: 'json',
             success: function (result) {
                 console.log(result)
