--- a/NoteApp/Views/List/EditList.cshtml
+++ b/NoteApp/Views/List/EditList.cshtml
@@ -18,7 +18,7 @@
                 <div class="form-group">
                     <div class="col-md-10" Style=" width: 400px;align-self:center">
                         <h5 style="  text-align: center;">Edit List</h5>
-                        @if ((string)TempData["var"] == "qwerty")
+                        @if ((string)TempData["list"] == "WrongId")
                         {
                             <span style="margin-left: 109px;" class="badge rounded-pill bg-danger">There is no List with this Id !!</span>
                         }
