--- a/NoteApp/Views/Note/SearchByTags.cshtml
+++ b/NoteApp/Views/Note/SearchByTags.cshtml
@@ -1,19 +1,15 @@
-﻿@*@using NoteApp.Models;
-    @model ListViewModel*@
+﻿
 @model IEnumerable<NoteApp.Models.NotesModel>
+@*@if (Model.Count() == 0)
+    {
+        @*<img src="https://cdn.dribbble.com/users/1135689/screenshots/3957784/no-result-found.png" class="center" />
+        <a href="/List/Index" class="center btn btn-primary">
+            <i class="fa fa-arrow-circle-left" style="font-size:24px"></i>
+            Back to List
+        </a>
+    }
+    else*@
 @{
-    ViewBag.Title = "SearchNotes";
-}
-@if (Model.Count() == 0)
-{
-    <img src="https://cdn.dribbble.com/users/1135689/screenshots/3957784/no-result-found.png" class="center" />
-    <a href="/List/Index" class="center btn btn-primary">
-        <i class="fa fa-arrow-circle-left" style="font-size:24px"></i>
-        Back to List
-    </a>
-}
-else
-{
     <br />
     <a href="/List/Index" class=" btn btn-secondary">
         <i class="fa fa-arrow-circle-left" style="font-size:24px"></i>
@@ -27,41 +23,96 @@ else
         <div class="row">
             @foreach (var item in Model)
             {
+                if (item != null)
+                {
+                    <!-- Display a div of col-sm-3 containing the card up to n number of times, ie in a loop -->
+                    <div class="card border-dark mb-3" style="max-width: 26rem;margin-left:16px;">
+                        <div class="card-header bg-transparent border-success" style="text-align:center">
+                            <span class="badge bg-secondary">Note @*Id: &nbsp;@item.NoteId*@</span>
+                        </div>
+                        <div class="card-body text-success" style="text-align:center">
+                            @if (item.NoteFile != null)
+                            {
+                                FileInfo fi = new FileInfo(item.NoteFile);
+                                // Get file extension
+                                string extn = fi.Extension;
+                                if (extn == ".mp4")
+                                {
+                                    <video controls="controls" width="375" height="300">
+                                        <source src="@item.NoteFile" type="video/mp4" />
+                                    </video>
+                                }
+                                else if (extn == ".mp3")
+                                {
+                                    <audio id="audio" controls><source src="@item.NoteFile"></audio>
+                                }
+                                else
+                                {
+                                    <a href="#" class="pop">
+                                        <img src="@item.NoteFile" style="width: 200px; height: 300px;">
+                                    </a> <!-- Modal -->
+                                    <div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog  modal-fullscreen" data-dismiss="modal">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title" id="staticBackdropLabel"></h5>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <img src="" class="imagepreview" style="width: 60%;">
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <div class="col-xs-12">
+                                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
 
-                <!-- Display a div of col-sm-3 containing the card up to n number of times, ie in a loop -->
-                <div class="card border-dark mb-3" style="max-width: 26rem;margin-left:16px;">
-                    <div class="card-header bg-transparent border-success" style="text-align:center">
-                        <span class="badge bg-secondary">Note Id: &nbsp;@item.NoteId</span>
-                    </div>
-                    <div class="card-body text-success" style="text-align:center">
-                        @if (item.NoteFile != null)
-                        {
-                            FileInfo fi = new FileInfo(item.NoteFile);
-                            // Get file extension
-                            string extn = fi.Extension;
-                            if (extn == ".mp4")
-                            {
-                                <video controls="controls" width="375" height="300">
-                                    <source src="@item.NoteFile" type="video/mp4" />
-                                </video>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                }
                             }
-                            else if (extn == ".mp3")
+                            @if (item.NoteDesciption != null)
                             {
-                                <audio id="audio" controls><source src="@item.NoteFile"></audio>
+
+
+                                <!-- Modal -->
+                                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog modal-dialog-scrollable">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">Note Description</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p id="noteText"></p>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                if (item.NoteDesciption.Length >= 200)
+                                {
+                                    <p id="notetext" style="text-align:center" class="card-text  ">@item.NoteDesciption.ToString().Substring(0, 200)</p>
+                                    <button onclick="noteDetail(@item.NoteId)" class="btn btn-light btn-sm" data-bs-toggle="modal" data-bs-target="#exampleModal">Read More </button>
+                                }
+                                else
+                                {
+                                    <p>@item.NoteDesciption</p>
+                                }
                             }
-                            else
-                            {
-                                <img src=" @item.NoteFile" width="375" height="300">
-                            }
-                        }
-                        <p class="card-text">@item.NoteDesciption  </p>
+                        </div>
+                        <div class="card-footer bg-transparent border-success" style="text-align:center">
+                            <span class="badge bg-secondary">Created Date: &nbsp;@item.CreatedDate</span>
+                        </div>
                     </div>
-                    <div class="card-footer bg-transparent border-success" style="text-align:center">
-                        <span class="badge bg-secondary">Created Date: &nbsp;@item.CreatedDate</span>
-                    </div>
-                </div>
+                }
             }
         </div>
     </div>
 }
 <link href="~/Content/css/searchByTag.css" rel="stylesheet" />
+<script src="~/Scripts/imageTextModal.js"></script>
