--- a/NoteApp/Views/Note/ShowNotes.cshtml
+++ b/NoteApp/Views/Note/ShowNotes.cshtml
@@ -56,7 +56,7 @@ else
                             }
                             else if (extn == ".mp3")
                             {
-                                <audio id="audio" controls><source src="@item.NoteFile"></audio>
+                                <audio id="audio" style="margin-top: 35px; "controls><source src="@item.NoteFile"></audio>
                             }
                             else
                             {
