--- a/NoteApp/Views/Note/SearchByTags.cshtml
+++ b/NoteApp/Views/Note/SearchByTags.cshtml
@@ -1,15 +1,15 @@
 ﻿
 @model IEnumerable<NoteApp.Models.NotesModel>
-@*@if (Model.Count() == 0)
+@if (Model.Count() == 0)
     {
-        @*<img src="https://cdn.dribbble.com/users/1135689/screenshots/3957784/no-result-found.png" class="center" />
+        <img src="https://cdn.dribbble.com/users/1135689/screenshots/3957784/no-result-found.png" class="center" />
         <a href="/List/Index" class="center btn btn-primary">
             <i class="fa fa-arrow-circle-left" style="font-size:24px"></i>
             Back to List
         </a>
     }
-    else*@
-@{
+    else
+{
     <br />
     <a href="/List/Index" class=" btn btn-secondary">
         <i class="fa fa-arrow-circle-left" style="font-size:24px"></i>
